# src/controllers/routes.js
@@ -1,4 +1,3 @@
-var authorizationController = require('./authorization-controller');
 var usersController = require('./users-controller');
 var bookingsController = require('./bookings-controller')
 var attendeesController = require('./attendees-controller')
@@ -11,7 +10,6 @@ function exposeAppRoutes(pathPrefix, app) {
     //Check jwt token middleware
     app.use(jwtCheckMiddleware().unless({path: jwtConfig.jwtIgnoreUrls}))
 
-    app.use(pathPrefix, authorizationController)
     app.use(pathPrefix, usersController)
     app.use(pathPrefix, bookingsController)
     app.use(pathPrefix, attendeesController)
