# src/swagger/documentation.json
@@ -20,10 +20,6 @@
     {
       "name": "attendees",
       "description": "Operations about attendees"
-    },
-    {
-      "name": "authorization",
-      "description": "Operations about authorization"
     }
   ],
   "schemes": [
@@ -184,10 +180,10 @@
         ]
       }
     },
-    "/app/auth/login": {
+    "/app/user/login": {
       "post": {
         "tags": [
-          "authorization"
+          "user"
         ],
         "summary": "Logs user into the system",
         "description": "",
@@ -241,20 +237,13 @@
               "$ref": "#/definitions/ErrorResponse"
             }
           }
-        },
-        "security": [
-          {
-            "auth": [
-              "token"
-            ]
-          }
-        ]
+        }
       }
     },
-    "/app/auth/logout": {
+    "/app/user/logout": {
       "post": {
         "tags": [
-          "authorization"
+          "user"
         ],
         "summary": "Logs out current logged in user session",
         "description": "",
